# practical-ml-with-pytorch

./: .gitignore  CITATION.cff  LICENSE  README.md  applications.html  applications.qmd  index.html  pyproject.toml  references.bib  requirements.txt  setup.py  slides.html  slides.qmd
.github/workflows/: deploy_pages.yml  draft-pdf.yml
JOSE_paper/: paper.bib  paper.md
applications_files/libs/quarto-html/: quarto-syntax-highlighting-dark-437f30c51863257f6a0e3763259ee6fb.css  quarto-syntax-highlighting-dark-9de9f6925d305bcf5b7eb9351f368d06.css
exercise-solutions/: 01_penguin_classification_solutions.ipynb  02_penguin_regression_solutions.ipynb  03_mnist_classification_solutions.ipynb  04_ellipse_regression_solutions.ipynb
exercises/: 01_penguin_classification.ipynb  02_penguin_regression.ipynb  03_mnist_classification.ipynb  04_ellipse_regression.ipynb  05_cnn_mlp_comparison.ipynb  05_cnn_mlp_comparison.ipynb:Zone.Identifier  README.md  penguin_classification.ipynb  penguin_regression.ipynb
scripts/: mlvenv_dawn.sh
slides/: README.md  applications.qmd  custom.scss  index.html  references.bib  slides.html  slides.qmd
slides/_extensions/quarto-ext/attribution/: _extension.yml
slides_files/libs/revealjs/plugin/reveal-attribution/: attribution.css  attribution.js
src/ml_workshop/: __init__.py  _ellipse.py  _penguins.py  _xpu.py
worked-solutions/: 01_penguin_classification_solutions.ipynb  02_penguin_regression_solutions.ipynb  03_mnist_classification_solutions.ipynb  04_ellipse_regression_solutions.ipynb  README.md
