[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "practical_ml_with_pytorch"
version = "1.0.0"
description = "ICCS ML workshop."
authors = [
  { name="Jim Denholm", email="jd949@cam.ac.uk" },
  { name="Jack Atkinson", email="jwa34@cam.ac.uk" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9.10"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch>=2.0",
    "torchvision>=0.13",
    "palmerpenguins>=0.1.4",
    "pandas",
    "ipykernel",
    "scikit-image",
    "notebook",
    "torch_tools @ git+https://github.com/jdenholm/TorchTools.git",
    "matplotlib",
    "numpy<2.0.0",
]

[project.optional-dependencies]
# test = [
#     "pytest>=7.2.0",
# ]
lint = [
    "black>=22.12.0",
    # "pylint",
    "pydocstyle",
    "mypy>=1.0.0",
    "jupyter-black",
]

[project.urls]
"Homepage" = "https://github.com/Cambridge-ICCS/ml-training-material"
"Bug Tracker" = "https://github.com/Cambridge-ICCS/ml-training-material/issues"

[tool.setuptools]
package-dir = {}
